--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
     <main>
       <div class="container">
         <div class="row">
-      <!--Spalte 2 - Sidebar-->
+      <!--Spalte 1 - Avatar & Sidebar-->
           <div class="col order-md-last col-md-3 col-md-offset-1">
-                <h3>About me</h3>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <div class="text-center">
+              <img src="https://avatars3.githubusercontent.com/u/53256699?s=460&v=4" class="img-fluid img-thumbnail rounded-circle" style="width:75%;height:auto" alt="Avatar Geekmaedchen"/>
             </div>
-      <!--Spalte 1 - Blogtext-->
+            <h3>About me</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+          </div>
+      <!--Spalte 2 - Blogtext-->
           <div class="col-md-8">
             <h3>Pythonkurs</h3>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
