--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2 class=text-muted>aka Geekmaedchen</h2>
               </div>
  
-              <div class="col-md-3">
+              <div class="col-md-3 text-md-center">
                   <span>
                       <a href="#" style="margin-right: 1em">Kontakt</a> 
                       <a href="#">Biografie</a>
