Profiles and bio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  
               <div class="col-md-3 text-md-center">
                   <span>
-                      <a href="#" style="margin-right: 1em">Kontakt</a> 
+                      <a style="margin-right: 1em" href="#">Kontakt</a> 
                       <a href="#">Biografie</a>
                   </span>
               </div>
@@ -50,9 +50,38 @@
             <h3>Aktuelles</h3>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
             <h4>Bootcamp WebDev</h4>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-          </div>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <!--Kontaktdaten-->
+              <h3 id="attr-href">Kontakt</h3>
+              <address>
+              <a href="mailto:anja.schrieber@gmail.com">anja.schrieber@gmail.com</a><br>
+              <a href="tel:+13115552368">(311) 555-2368</a>
+              </address>
+      <!--Profillinks-->
+        <figure class="figure">
+          <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" class="figure-img img-fluid rounded" style="width:auto;height:225px" alt="Github-Logo">
+          <figcaption class="figure-caption text-center"><a href="https://github.com/geekmaedchen">Github-Profil</a></figcaption>
+        </figure>
 
+        <figure class="figure">
+            <img src="https://cdn.worldvectorlogo.com/logos/codepen-icon.svg" class="figure-img img-fluid rounded" style="width:auto;height:225px" alt="CodePen-Logo">
+            <figcaption class="figure-caption text-center"><a href="https://codepen.io/geekmaedchen">CodePen-Profil</a></figcaption>
+          </figure>
+
+          <figure class="figure">
+              <img src="https://cdn.worldvectorlogo.com/logos/linkedin-icon-1.svg" class="figure-img img-fluid rounded" style="width:auto;height:225px" alt="LinkedIn-Logo">
+              <figcaption class="figure-caption text-center"><a href="https://www.linkedin.com/in/anja-schrieber-26b398118/">LinkedIn-Profil</a></figcaption>
+            </figure>
+      <!--Biografie-->
+            <div>
+              <h3 id="attr-href">Biografie</h3>
+              <p>
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
+              </p>
+            </div>
+
+
+          </div>
         </div>
       </div>
     </main>
